# bluez

./: .SRCINFO  .b4-config  .checkpatch.conf  .clang-format  .gitignore  .gitlint  .gitmodules  .mailmap  ANALYSIS.md  AUTHORS  COPYING  ChangeLog  ChangeLog.libs  ChangeLog.utils  HACKING  Makefile.am  Makefile.android  Makefile.audio  Makefile.in  Makefile.mesh  Makefile.obexd  Makefile.plugins  Makefile.profiles  Makefile.tools  NEWS  PKGBUILD  README  README-ANALYSIS.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_SUMMARY.txt  SUMMARY.md  TODO  acinclude.m4  aclocal.m4  bluetooth.conf  bluez-hid-gamepad-quirks.install  bluez.m4  bluez.pc.in  bootstrap  (+13 more)
alsa/: Makefile.am  pcm_a2dp.c  sbc.c  sbc.h
android/: Android.mk  Makefile.am  README  a2dp-sink.c  a2dp.c  a2dp.h  adapter.c  adapter.h  android-tester.c  audio-ipc-api.txt  audio-ipc.c  audio-ipc.h  audio-msg.h  avctp.c  avctp.h  avdtp.c  avdtp.h  avdtptest.c  avrcp-lib.c  avrcp-lib.h  avrcp.c  avrcp.h  bas.c  bite-rfcomm.txt  bite-spp.txt  bluetooth.c  bluetooth.h  bluetoothd-snoop.c  bluetoothd-wrapper.c  bluetoothd.te  cts.txt  device.c  device.h  dis.c  dis.h  gatt.c  gatt.h  hal-a2dp-sink.c  hal-a2dp.c  hal-audio-aptx.c  (+155 more)
audio/: Makefile.am  a2dp.c  a2dp.h  asound.conf  audio-api.txt  audio.conf  audio.service  avctp.c  avctp.h  avdtp.c  avdtp.h  avrcp.c  avrcp.h  bluetooth.conf  control.c  control.h  ctl_bluetooth.c  device.c  device.h  error.c  error.h  gateway.c  gateway.h  gsta2dpsendersink.c  gsta2dpsendersink.h  gsta2dpsink.c  gsta2dpsink.h  gstavdtpsink.c  gstbluetooth.c  gstpragma.h  gstrtpsbcpay.c  gstsbcdec.c  gstsbcenc.c  gstsbcparse.c  gstsbcutil.c  gstsbcutil.h  headset.c  headset.h  headset.service  ipc.c  (+30 more)
client/: admin.c  admin.h  adv_monitor.c  adv_monitor.h  advertising.c  advertising.h  agent.c  agent.h  assistant.c  assistant.h  bluetoothctl-admin.rst  bluetoothctl-advertise.rst  bluetoothctl-assistant.rst  bluetoothctl-bredr.rst  bluetoothctl-endpoint.rst  bluetoothctl-gatt.rst  bluetoothctl-hci.rst  bluetoothctl-mgmt.rst  bluetoothctl-monitor.rst  bluetoothctl-player.rst  bluetoothctl-scan.rst  bluetoothctl-transport.rst  bluetoothctl.rst  cs.c  cs.h  display.c  display.h  error-parse.c  error-parse.h  gatt.c  gatt.h  hci.c  hci.h  main.c  meson.build  mgmt.c  mgmt.h  player.c  player.h  print.c  (+3 more)
common/: Makefile.am  btio.c  btio.h  dbus-helper.c  dbus-helper.h  dbus.c  dbus.h  error.c  error.h  glib-ectomy.c  glib-ectomy.h  glib-helper.c  glib-helper.h  hal-dummy.c  hal-libhal.c  hal.h  helper.c  helper.h  list.c  list.h  logging.c  logging.h  notify-dummy.c  notify-inotify.c  notify.h  oui.c  oui.h  ppoll.h  sdp-dummy.c  sdp-expat.c  sdp-glib.c  sdp-xml.c  sdp-xml.h  test_textfile.c  textfile.c  textfile.h  uinput.h
compat/: Makefile.am  bnep.c  dun.c  dund.1  dund.c  dund.h  fakehid.c  fakehid.txt  hidd.1  hidd.c  hidd.h  lib.h  msdun.c  pand.c  pand.h  sdp.c  sdp.h
cups/: Makefile.am  cups.h  hcrp.c  main.c  sdp.c  spp.c
daemon/: Makefile.am  adapter.c  adapter.h  auth-agent.c  bluetooth.conf  database.c  database.h  echo.c  echo.service  hal-namespace.txt  main.c  manager.c  manager.h  passkey-agent.c  service-agent.xml  service.c  service.h  system.h  test-database  test-manager
doc/: Makefile.am  adapter-api.txt  admin-policy-api.txt  advertisement-monitor-api.txt  advertising-api.txt  agent-api.txt  alert-api.txt  assigned-numbers.rst  assigned-numbers.txt  attribute-api.txt  audio-api.txt  audio-telephony-design.txt  battery-api.txt  bdaddr.rst  bluetooth-meshd.rst.in  bluetoothctl-admin.rst  bluetoothctl-advertise.rst  bluetoothctl-assistant.rst  bluetoothctl-bredr.rst  bluetoothctl-cs.rst  bluetoothctl-endpoint.rst  bluetoothctl-gatt.rst  bluetoothctl-hci.rst  bluetoothctl-le.rst  bluetoothctl-mgmt.rst  bluetoothctl-monitor.rst  bluetoothctl-player.rst  bluetoothctl-scan.rst  bluetoothctl-telephony.rst  bluetoothctl-transport.rst  bluetoothctl.rst  bluez-docs.xml  btmon-a2dp.rst  btmon-advertising.rst  btmon-classic-audio.rst  btmon-connections.rst  btmon-cs.rst  btmon-gatt.rst  btmon-hci-init.rst  btmon-hfp.rst  (+131 more)
emulator/: amp.c  b1ee.c  btdev.c  btdev.h  bthost.c  bthost.h  hciemu.c  hciemu.h  hfp.c  le.c  main.c  meson.build  phy.c  phy.h  serial.c  server.c  server.h  smp.c  vhci.c  vhci.h
gdbus/: Makefile.am  client.c  gdbus.h  mainloop.c  meson.build  object.c  polkit.c  watch.c
hcid/: Bluetooth.cs  Makefile.am  Makefile.in  adapter-api.txt  adapter.c  adapter.h  agent.c  agent.h  auth-agent.c  bluetooth.conf  bluez-hcid.conf  dbus-adapter.c  dbus-adapter.h  dbus-api-future.txt  dbus-api.txt  dbus-common.c  dbus-common.h  dbus-database.c  dbus-database.h  dbus-device.c  dbus-device.h  dbus-error.c  dbus-error.h  dbus-hci.c  dbus-hci.h  dbus-manager.c  dbus-manager.h  dbus-rfcomm.c  dbus-rfcomm.h  dbus-sdp.c  dbus-sdp.h  dbus-security.c  dbus-security.h  dbus-service.c  dbus-service.h  dbus-test  dbus-test.c  dbus-test.h  dbus-todo.txt  dbus.c  (+44 more)
hidd/: Makefile.am  fakehid.c  fakehid.txt  hidd.1  hidd.h  main.c  sdp.c  uinput.h
include/: Makefile.am  Makefile.in  bluetooth.h  bnep.h  cmtp.h  hci.h  hci_lib.h  hci_uart.h  hci_vhci.h  hidp.h  l2cap.h  rfcomm.h  sco.h  sdp.h  sdp_internal.h  sdp_lib.h
input/: Makefile.am  bluetooth-input.conf  device.c  device.h  error.c  error.h  fakehid.c  fakehid.h  hog_device.c  hog_device.h  input-api.txt  input-service.c  input-service.h  input.conf  input.service  main.c  manager.c  manager.h  server.c  server.h  sixpair.c  storage.c  storage.h  test-input
lib/: Makefile.am  a2mp.h  bluetooth.c  bluetooth.h  bnep.h  hci.c  hci.h  hci_lib.h  l2cap.h  meson.build  mgmt.h  sdp.c  sdp.h  sdp_lib.h  uuid.c  uuid.h
mesh/: README  agent.c  agent.h  appkey.c  appkey.h  bluetooth-mesh.conf  bluetooth-mesh.service.in  bluetooth-meshd.rst.in  btmesh.c  cfgmod-server.c  cfgmod.h  config-client.c  config-model.h  config-server.c  crypto.c  crypto.h  dbus.c  dbus.h  display.c  display.h  error.h  friend.c  friend.h  gatt-proxy-svc.c  gatt-proxy-svc.h  gatt-service.c  gatt-service.h  gatt.c  gatt.h  keyring.c  keyring.h  keys.h  main.c  (+61 more)
(+1335 files in other folders)
